--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yoti Verification</title>
+    <!-- <title>Yoti Verification</title> -->
     <script src="https://www.yoti.com/share/client/v2"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
         .card {
-            background: #f5f5f5;
+            background: #FBFDF8;
             border-radius: 8px;
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 600px;
+            padding: 15px;
+            margin: 0 auto;
+            max-width: 340px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .status-message {
-            color: #666;
+            color: #090909;
             margin: 10px 0;
             font-size: 14px;
         }
@@ -26,7 +26,7 @@
 
         .spinner {
             border: 3px solid #f3f3f3;
-            border-top: 3px solid #3498db;
+            border-top: 3px solid #033d33;
             border-radius: 50%;
             width: 20px;
             height: 20px;
@@ -44,8 +44,8 @@
 </head>
 <body>
     <div class="card">
-        <h1>Welcome to Kaimai Verification</h1>
-        <p>Please complete your verification using the secure Yoti service below.</p>
+        <!-- <h1>Welcome to Kaimai Verification</h1> -->
+        <!-- <p>Please complete your verification using the secure Yoti service below.</p> -->
         
         <div id="status-messages">
             <div class="status-message" id="loading-message">
