Updated callback to res.redirect to test site

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,9 @@
 
         .status-message {
             color: #090909;
-            margin: 10px 0;
+            margin: 5px 0;
             font-size: 14px;
+            text-align: center;
         }
 
         .loading {
@@ -39,6 +40,10 @@
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+
+        #status-messages {
+            text-align: center;
         }
     </style>
 </head>
